Add the Platform section

--- a/index.html
+++ b/index.html
@@ -133,9 +133,56 @@
               </div>
             </div>
              
-            <div class="platform text-center">
-                 <h2 class="fw-700 fs-50 text-white unlimited">One Platform. Unlimited possibilities.</h2>
+            <div class="platform-container">      
+              <div class="platform text-center">
+                <h2 class="fw-700 text-white text-center unlimited">One Platform. Unlimited possibilities.</h2>
+                <div class="accest flexRow">
+                  <div class="accest-icon">
+                    <img class="accest-img" src="/Images/money.png" alt="">
+                  </div>
+                  <div class="accest-text">
+                    <h2 class="fw-700 text-center text-white earn-accest">Earn passive 
+                      income with your Investment</h2>
+                      <p class="fw-400 fs-20 text-white accest-make">Kompwnd makes it easy to make
+                         your crypto work for you by earning 200% yield on your investment</p>
+                  </div>
+                 </div>
+                 <div class="accest">
+                  <div class="accest-icon">
+                    <img class="accest-img" src="/Images/wallet.png" alt="">
+                  </div>
+                  <div class="accest-text">
+                    <h2 class="fw-700 text-center text-white earn-accest">Move assets across wallet
+                      in seconds.</h2>
+                      <p class="fw-400 fs-20 text-white accest-make">Gasless transaction from one
+                         wallet to another wallet in seconds, just by connecting your wallet.</p>
+                  </div>
+                 </div>
+                 <div class="accest">
+                  <div class="accest-icon">
+                    <img class="accest-img" src="/Images/savings.png" alt="">
+                  </div>
+                  <div class="accest-text">
+                    <h2 class="fw-700 text-center text-white earn-accest">Earn 
+                      Matching Bonus & Referrals</h2>
+                      <p class="fw-400 fs-20 text-white accest-make">Match reward is paid residually on team
+                         dividend generated value for claim/roll</p>
+                  </div>
+                 </div>
+                 <div class="accest">
+                  <div class="accest-icon">
+                    <img class="accest-img" src="/Images/financial.png" alt="">
+                  </div>
+                  <div class="accest-text">
+                    <h2 class="fw-700 text-center text-white earn-accest">Get 
+                      Ranks & 
+                      Rewards</h2>
+                      <p class="fw-400 fs-20 text-white accest-make">Build your team, earn ranks and rewards and 
+                        get profit monthly according to your rank.</p>
+                  </div>
+                 </div>
             </div>
+          </div>
         </section>
     </main>
 </body>
