Add the Growing Section

--- a/index.html
+++ b/index.html
@@ -218,6 +218,36 @@
               </div>
             </div>
            </div>
+           <!---Growing Section-->
+           <div class="growing-container">
+            <div class="growing-text">
+              <h1 class="fw-700 text-white network">A growing network of DeFi Ecosystem.</h1>
+              <p class="fw-400 text-white ecosystem">Kompwnd ecosytem is made by Developers, traders, and liquidity providers participate together
+                 in a financial marketplace that is open and accessible to all.</p>
+                 <button class="btn-eco btn-primary text-white">Kompwnd Ecosystem</button>
+            </div>
+            <div class="grwoing-items">
+              <div class="alta-crypt">
+                <button class="btn-grwoing-bg btn-alta"><img class="alta-img" src="/Images/alta.png" alt="Alta"></button>
+                <button class="btn-grwoing-bg btn-lottery"><img src="/Images/crypto.png" alt="Cryt Latory"></button>
+              </div>
+                <div class="tote-container">
+                  <button class="btn-grwoing-bg btn-tote"><img src="/Images/tote.png" alt="Tote"></button>
+                  <button class="btn-grwoing-bg btn-finace"><img src="/Images/finance.png" alt="finace"></button>
+                  <button class="btn-grwoing-bg btn-lunch"><img src="/Images/Launch-Pad.png" alt="Lunch"></button>
+                </div>
+                <div class="tote-container">
+                  <button class="btn-grwoing-bg btn-skill"><img src="/Images/skill.png" alt="Skill"></button>
+                  <button class="btn-grwoing-bg btn-infra"><img src="/Images/infra.png" alt="Infra"></button>
+                  <button class="btn-grwoing-bg btn-mdu"><img src="/Images/midu.png" alt="Midu"></button>
+                </div>
+                <div class="tote-container btn-hashpage-container">
+                  <button class="btn-grwoing-bg btn-hashpage"><img src="/Images/Hashpage.png" alt="Hashpage"></button>
+                  <button class="btn-grwoing-bg btn-gvn"><img src="/Images/GVN.png" alt="GVN"></button>
+                  <button class="btn-grwoing-bg btn-ala"><img src="/Images/AlaSwap.png" alt="ala swap"></button>
+                </div>
+            </div>
+           </div>
         </section>
     </main>
 </body>
