Add the footer section

--- a/index.html
+++ b/index.html
@@ -249,6 +249,49 @@
             </div>
            </div>
         </section>
+        <footer class="footer-container">
+          <div class="footer-data">
+            <div class="contact">
+              <img class="logo" src="/Images/logo-black.png" alt="Logo">
+                <p class="fw-600 footer-mint">Deposit. Earn. Mint</p>
+                <p class="email-ft"><a class="fw-400 fs-14 footer-text" href="#">support@kompwnd.com</a></p>
+                <a href="#" class="fw-400 fs-14 footer-text">@2023 Kompwnd All Rights Reserved</a>
+            </div>
+            <div class="product-item">
+              <h3 class="fw-600 product-ft">Product</h3>
+              <a href="#" class="fw-400 fs-14 footer-text">Kompwnd Launch App</a>
+              <a href="#" class="fw-400 fs-14 footer-text">Insurance</a>
+              <a href="#" class="fw-400 fs-14 footer-text">Prediction Market</a>
+              <a href="#" class="fw-400 fs-14 footer-text">Dollor Staking</a>
+              <a href="#" class="fw-400 fs-14 footer-text">Swap</a>
+            </div>
+            <div class="product-item">
+              <h3 class="fw-600 product-ft">About</h3>
+              <a href="#" class="fw-400 fs-14 footer-text">Contact</a>
+              <a href="#" class="fw-400 fs-14 footer-text">Ecosystem</a>
+              <a href="#" class="fw-400 fs-14 footer-text">Community</a>
+              <a href="#" class="fw-400 fs-14 footer-text">FQBa</a>
+            </div>
+            <div class="product-item">
+              <h3 class="fw-600 product-ft">Help</h3>
+              <a href="#" class="fw-400 fs-14 footer-text">Helo Center</a>
+              <a  href="#" class="fw-400 fs-14 footer-text">Security</a>
+              <a href="#" class="fw-400 fs-14 footer-text">Ligal and Privay</a>
+              <a href="#" class="fw-400 fs-14 footer-text">Cookie preferences</a>
+            </div>
+            <div class="social-ft">
+              <h3 class="fw-600 product-ft">Follow us</h3>
+              <div class="social-container">
+                <a href="#" class="social-bg"><img class="social-pix" src="/Images/telegram.png" alt="Telegram"></a>
+                <a href="#" class="social-bg"><img class="social-pix" src="/Images/twitter.png" alt="Telegram"></a>
+                <a href="#" class="social-bg"><img class="social-pix" src="/Images/linkedin.png" alt="Telegram"></a>
+                <a href="#" class="social-bg"><img class="social-pix" src="/Images/youtube.png" alt="Telegram"></a>
+                <a href="#" class="social-bg"><img class="social-pix" src="/Images/fb.png" alt="Telegram"></a>
+                <a href="#" class="social-bg"><img class="social-pix" src="/Images/insta.png" alt="Telegram"></a>
+              </div>
+            </div>
+          </div>
+        </footer>
     </main>
 </body>
 </html>
