Resolve the some issues

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <div class="banner">
             <div class="banner-text">
                 <h1 class='community fw-400 text-white'>Welcome to the Era of 
-                    <span class="fw-700">Community Capitalism</span>
+                    <span class="fw-700 block">Community Capitalism</span>
                     </h1>
                         <p class='economy fw-400 text-white'>
                             Kompwnd is creating an economy that works for 
-                            community wellness and self sustainability
+                           <span class="block"> community wellness and self sustainability</span>
                            </p>
                    
                  <div class="btn-container">
@@ -88,7 +88,7 @@
               <div class="wallet">
                 <div>
                   <p class="fw-400 fs-20 text-white pro-text">Product</p>
-                  <h1 class="fw-700 fs-50 text-white profit">Your Profit at your fingertips</h1>
+                  <h1 class="fw-700 fs-50 text-white profit">Your Profit at <span class="block">your fingertips</span> </h1>
                   <p class="fw-400 fs-20 text-white depost-text"> Create your wallet, deposit, and track your profit across our platform. Whether this is
                      your first or five millionth investment, we ve got tools built just for you.</p>
                 </div>
@@ -103,6 +103,7 @@
                 </div>
             </div>
             <div class="fingertip-img">
+              <img src="/Images/fingertip.png" alt="Fingertip">
             </div>
           </div>
            </div>
@@ -136,14 +137,14 @@
              <!--Platform Section-->
             <div class="platform-container">      
               <div class="platform text-center">
-                <h2 class="fw-700 text-white text-center unlimited">One Platform. Unlimited possibilities.</h2>
+                <h2 class="fw-700 text-white text-center unlimited">One Platform. <span class="block">Unlimited possibilities.</span> </h2>
                 <div class="accest">
                   <div class="accest-icon">
                     <img class="accest-img" src="/Images/money.png" alt="">
                   </div>
                   <div class="accest-text">
                     <h2 class="fw-700 text-center text-white earn-accest">Earn passive 
-                      income with your Investment</h2>
+                     <span class="block">income with</span> your Investment</h2>
                       <p class="fw-400 fs-20 text-white accest-make">Kompwnd makes it easy to make
                          your crypto work for you by earning 200% yield on your investment</p>
                   </div>
@@ -154,7 +155,7 @@
                   </div>
                   <div class="accest-text">
                     <h2 class="fw-700 text-center text-white earn-accest">Move assets across wallet
-                      in seconds.</h2>
+                     <span class="block"> in seconds.</span></h2>
                       <p class="fw-400 fs-20 text-white accest-make">Gasless transaction from one
                          wallet to another wallet in seconds, just by connecting your wallet.</p>
                   </div>
@@ -165,7 +166,7 @@
                   </div>
                   <div class="accest-text">
                     <h2 class="fw-700 text-center text-white earn-accest">Earn 
-                      Matching Bonus & Referrals</h2>
+                     <span class="block">Matching Bonus</span>  & Referrals</h2>
                       <p class="fw-400 fs-20 text-white accest-make">Match reward is paid residually on team
                          dividend generated value for claim/roll</p>
                   </div>
@@ -176,7 +177,7 @@
                   </div>
                   <div class="accest-text">
                     <h2 class="fw-700 text-center text-white earn-accest">Get 
-                      Ranks & 
+                     <span class="block">Ranks &</span>  
                       Rewards</h2>
                       <p class="fw-400 fs-20 text-white accest-make">Build your team, earn ranks and rewards and 
                         get profit monthly according to your rank.</p>
@@ -187,7 +188,7 @@
            <!--Access Section-->
            <div class="access-contanier">
             <div class="access">
-              <h2 class="fw-700 text-white text-center useful-text">Access useful products & service with KPW</h2>
+              <h2 class="fw-700 text-white text-center useful-text">Access useful products <span class="block">& service with KPW</span> </h2>
               <div class="access-card-container">
                 <div class="access-card">
                   <div class="access-card-item">
@@ -220,8 +221,9 @@
            </div>
            <!---Growing Section-->
            <div class="growing-container">
+            <div class="growing">
             <div class="growing-text">
-              <h1 class="fw-700 text-white network">A growing network of DeFi Ecosystem.</h1>
+              <h1 class="fw-700 text-white network">A growing  <span class="block">network of DeFi</span> Ecosystem.</h1>
               <p class="fw-400 text-white ecosystem">Kompwnd ecosytem is made by Developers, traders, and liquidity providers participate together
                  in a financial marketplace that is open and accessible to all.</p>
                  <button class="btn-eco btn-primary text-white">Kompwnd Ecosystem</button>
@@ -248,6 +250,7 @@
                 </div>
             </div>
            </div>
+          </div>
         </section>
         <footer class="footer-container">
           <div class="footer-data">
