Remove the negtive margin

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                  <button class="btn-eco btn-primary text-white">Kompwnd Ecosystem</button>
             </div>
             <div class="grwoing-items">
-              <div class="alta-crypt">
+              <div class="tote-container">
                 <button class="btn-grwoing-bg btn-alta"><img class="alta-img" src="/Images/alta.png" alt="Alta"></button>
                 <button class="btn-grwoing-bg btn-lottery"><img src="/Images/crypto.png" alt="Cryt Latory"></button>
               </div>
@@ -255,7 +255,7 @@
         <footer class="footer-container">
           <div class="footer-data">
             <div class="contact">
-              <img class="logo" src="/Images/logo-black.png" alt="Logo">
+              <img class="logo-footer" src="/Images/logo-black.png" alt="Logo">
                 <p class="fw-600 footer-mint">Deposit. Earn. Mint</p>
                 <p class="email-ft"><a class="fw-400 fs-14 footer-text" href="#">support@kompwnd.com</a></p>
                 <a href="#" class="fw-400 fs-14 footer-text">@2023 Kompwnd All Rights Reserved</a>
