Set the alignment of some sections

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </h1>
                         <p class='economy fw-400 text-white'>
                             Kompwnd is creating an economy that works for 
-                           <span class="block"> community wellness and self sustainability</span>
+                           community wellness and self sustainability
                            </p>
                    
                  <div class="btn-container">
@@ -258,7 +258,7 @@
               <img class="logo-footer" src="/Images/logo-black.png" alt="Logo">
                 <p class="fw-600 footer-mint">Deposit. Earn. Mint</p>
                 <p class="email-ft"><a class="fw-400 fs-14 footer-text" href="#">support@kompwnd.com</a></p>
-                <a href="#" class="fw-400 fs-14 footer-text">@2023 Kompwnd All Rights Reserved</a>
+                <a href="#" class="fw-400 fs-14 footer-text">@2023 Kompwnd <span class="block">All Rights Reserved</span> </a>
             </div>
             <div class="product-item">
               <h3 class="fw-600 product-ft">Product</h3>
